--- a/style.css
+++ b/style.css
@@ -64,6 +64,8 @@ main img {
 }
 main img.pequena {
     width: 50%;
+    display: block;
+    margin: auto;
 }
 body {
     background-color: #81ffab;
