--- a/style.css
+++ b/style.css
@@ -91,11 +91,10 @@ h2 {
     color: whitesmoke;
 }
 div.video {
-    background-color: #00530a;
-    margin: 0px -20px 30px -20x;
-    padding: 20px;
+    background-color: #135300;
+    background-size: 100%;
     padding-bottom: 59%;
-
+    width: auto;
     position: relative;
 }
 div.video > iframe {
