--- a/style.css
+++ b/style.css
@@ -92,9 +92,9 @@ h2 {
 }
 div.video {
     background-color: #135300;
-    background-size: 100%;
+    min-width: 320px;
+    max-width: 800px;
     padding-bottom: 59%;
-    width: auto;
     position: relative;
 }
 div.video > iframe {
