--- a/style.css
+++ b/style.css
@@ -92,8 +92,11 @@ h2 {
 }
 div.video {
     background-color: #135300;
-    min-width: 320px;
-    max-width: 800px;
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
     padding-bottom: 59%;
     position: relative;
 }
