--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ nav > a {
     padding: 10px;
     font-weight: bold;
     transition-duration: 0.5s;
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
 }
 nav {
     text-align: left;
